--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build -t hackedu/markcop .
+    - docker build -t hackclub/markcop .
 
 test:
   override:
@@ -16,4 +16,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push hackedu/markcop
+      - docker push hackclub/markcop
