Only notify on master

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,12 @@ machine:
   services:
     - docker
 
+experimental:
+  notify:
+    branches:
+      only:
+        - master
+
 dependencies:
   override:
     - docker info
